# discord-chatbot

./: .gitignore  README.md  bot.py  config.py  pyproject.toml  requirements.txt  start-chatbot.bat  start-chatbot.ps1
cogs/: __init__.py  chatbot.py
core/: __init__.py  database.py  gemini_client.py  models.py  queue_manager.py  web_search.py
db/: schema.sql
